# maiv

./: README.md  assembler.py  blade_rnner_gpu.py  blade_runner.py  deals_test.xlsx  deals_train.xlsx  dyno_test.xlsx  dyno_train.xlsx  fsmask_GRU40.pkl  fsmask_LR40.pkl  model_GRU100.pkl  model_GRU40.pkl  model_LR40.pkl  neura.py  projector_GRU40.pkl  pyproject.toml  scaler_GRU100.pkl  scaler_LR40.pkl  transform.py
data/: dataset.xlsx  dataset_raw.xlsx  dataset_refined.xlsx  harvest_device.py  сomments.xlsx
data/MODELFX_new/Japan/: Economic Indicator_Japan CPI,   year on year, Standardized, SA, Chg Y_Y_28 Dec 2021.xlsx  Economic Indicator_Japan Trade Balance Total Yen_28 Dec 2021.xlsx  JP10Y.csv  JP2Y.csv  JP5Y.csv  JPY=X.csv
data/MODELFX_new/UK/: GB10Y.csv  GB2Y.csv  GB5Y.csv  GBPUSD=X.csv
data/MODELFX_old/UK/: CPI Economic Indicator_United Kingdom CPI,   year on year, Standardized, SA, Chg Y_Y_28 Dec 2021.xlsx  Economic Indicator_United Kingdom Goods Trade Balance GBP__28 Dec 2021.xlsx
data/RAW/: CPI_GB.xlsx  CPI_JP.xlsx  GBPX.xlsx  JPYX.xlsx  TRADEB_GB.xlsx  TRADEB_JP.xlsx  TRES10Y_GB.xlsx  TRES10Y_JP.xlsx  TRES2Y_GB.xlsx  TRES2Y_JP.xlsx  TRES5Y_GB.xlsx  TRES5Y_JP.xlsx
maiv/: add_analyze.py  blade_rnner.py  blade_runner.py  sample.py  transform.py
reports/: approaches_performance.xlsx  models_performance.xlsx
reports/reported/reported_bear/BEAR_CROSS_BASE/: deals_test.xlsx  deals_train.xlsx  dyno_test.xlsx  dyno_train.xlsx
reports/reported/reported_bear/BEAR_CROSS_TARGET1M/: deals_test.xlsx  deals_train.xlsx  dyno_test.xlsx  dyno_train.xlsx
(+88 files in other folders)
